# drums_midi_humanizer

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  REVIEW_AND_TODO.md  agent.md  humanize-drums.py  humanizer.py  midi_visualizer.py  pyproject.toml
src/drums_midi_humanizer/: __init__.py  cli.py  gui.py
src/drums_midi_humanizer/config/: __init__.py  drums.py
src/drums_midi_humanizer/core/: __init__.py  humanizer.py
src/drums_midi_humanizer/utils/: __init__.py  midi.py
src/drums_midi_humanizer/visualization/: __init__.py  visualizer.py
tests/: test_cli.py  test_config.py  test_humanizer.py  test_integration_logic.py  test_midi_utils.py  test_visualizer.py
