[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drums_midi_humanizer"
version = "0.1.0"
description = "A tool to add human feel to MIDI drum tracks"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["midi", "music", "drums", "humanization"]
authors = [
    { name = "Andre", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mido>=1.2.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "Pillow>=9.0.0",
]


[project.scripts]
humanize-drums = "drums_midi_humanizer.cli:main"
humanize-drums-gui = "drums_midi_humanizer.gui:main"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "mypy>=0.990",
]
